Fixed alignment of nav bar

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -19,7 +19,6 @@
 .home-page {
   align-items: center;
   border: 1px solid;
-  border-color: rgba(0,0,0,1);
   background-color: #4680B0;
   display: flex;
   flex-direction: column;
@@ -54,7 +53,6 @@
 .logout {
   height: 40px;
   right: 10px;
-  object-fit: cover;
   position: absolute;
   top: 10px;
   width: 103px;
@@ -115,7 +113,7 @@
 .logo-image {
   position: absolute;
   top: 5px;
-  left: 5px;
+  left: 0px;
   width: 50px;
   height: 50px;
 }
@@ -135,9 +133,6 @@ input {
 /* Logout */
 logout-button {
   border: none;
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
   cursor: pointer;
   color: #4680B0;
 }
